# mclc

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  README_RU.md
cwd/: file.txt  testFile.txt
src/: main.cpp
